# HPC

./: README.md  SP_Scalar.csv  perfTest
Assembly_Building_Blocks/: a.out  driver.cpp  gemm_asm_asimd_16_4_12.s  run.sh
Assembly_Code/: copy.c  copy.s  driver.cpp
Assembly_Code/Copy/: copy.c
Assembly_Code/Debug/: a.out  driver.cpp  run.sh
Assembly_Code/Hello/: Hello_World.dis  Hello_World.hex  Hello_World.s  a.out  run_hello_world.sh
Assembly_Code/Matrix/: a.out  driver.cpp  gemm_asm_gp.s  run.sh
Assembly_Small_GEMMs/: a.out  driver.cpp  gemm_asm_asimd_19_4_4.s  gemm_asm_asimd_32_32_32.s  run.sh
Benchmarking/: SP_SIMD.csv  SP_SIMD_new.csv  SP_SIMD_pinned.csv  SP_SIMD_pinned_new.csv  SP_Scalar.csv  SP_Scalar_pinned.csv  SP_Scalar_pinned_new.csv  plot.py
Bits/: a.out  compute.cpp  representations.cpp
JIT/mini_jit_base/: Makefile
JIT/mini_jit_base/src/: driver.cpp
JIT/mini_jit_base/src/backend/: Kernel.cpp  Kernel.h
JIT/mini_jit_base/src/generators/: Loop.cpp  Loop.h  MyExample.cpp  MyExample.h  Simple.cpp  Simple.h  SmallGEMM.cpp  SmallGEMM.h
JIT/mini_jit_base/src/instructions/: Asimd.cpp  Asimd.h  Asimd.test.cpp  Base.cpp  Base.h
Pipelining/: latency_dst_fmla.csv  latency_dst_fmul.csv  latency_fmla.csv  latency_fmul.csv  latency_src_asimd_fmla_sp.ptt  latency_src_asimd_fmul_sp.ptt  perfTest  plot.py
SVE/Examples/: a.out  driver.cpp  run.sh  sve_load_store.s  sve_mul_load_store.s  sve_predicated_argument_load_store.s  sve_predicated_load_store.s
SVE/VLA/: driver.cpp  run.sh  triad_low.s
Small_GEMMs/: CMakeLists.txt  compile.sh  driver  driver.cpp  gemm_compiler_32_32_32_32_32_32.cpp  gemm_compiler_32_32_32_32_32_32.hpp  gemm_ref.cpp  gemm_ref.h  gemm_ref.hpp  main  run.sh  tests.cpp
Small_GEMMs/benchmarks/: driverWithO2.txt  driverWithO3.txt  driverWithoutOptimization.txt
